=cut

=head1 NAME

Sys::SigAction::Changes - List of significant changes

=head1 CHANGES

Revision history for Sys::SigAction.

=head2 Changes in Sys::SigAction 0.09  17 Oct 2006

Francesco has pointed out that I still have a special case 
of safe=>0 broken for perl 5.8.0.  

The perl 5.8.1 build I tested with (I could not find 5.8.0)
it turns out has .../lib/5.8.1/auto/POSIX/SigAction/safe.al, 
my previous tests works.

This version of Sys::SigAction now as a test of these
subtleties in t/safe.t, those still no real test of 
safe=>1 for perls >= 5.8.2

Lincoln

=head2 Changes in Sys::SigAction 0.08  11 Oct 2006

Add extra protection to test of $attrs->(safe} when
the perl version is between 5.8 and 5.8.2, thanks to 
Francesco Duranti. Now test for it being defined before
testing it's value.  It would be a pretty bizarre case 
for that to happen, but... belt and suspenders... is 
'safe'.

Fix warning in safe.t which referred to attrs.t (old test name)
which was renamed to mask.t, to refer to mask.t.

Lincoln

=head2 Changes in Sys::SigAction 0.07  09 Oct 2006

Version 0.06 broke in perl < 5.8.2... (who uses that any more!!!)
Well someone does... at least on RedHat... I did (do) claim backwards
compatibility... So I fixed it right this time, by checking the perl 
version before called the safe accessor on the POSIX::SigAction object.

Still no good test for safe mode... be prepared to send me a test
if you think safe signal handling is broken... for sure I could
not get it to work the way I think it should with with deferred 
signals.

Lincoln

=head2 Changes in Sys::SigAction 0.06  25 June 2006

Fix setting of SAFE flag in POSIX::sigaction.  In response
to CPAN bug: http://rt.cpan.org/Ticket/Display.html?id=19916
Thanks to Steve Purk?, for point this out.

This required NOT setting safe=>1 (changing to to safe=>0)
in t/attrs.t and the the dbd-oracle test script.

A new test for safe=>1 needs to be developed, which explicitly tests